--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "scripts": {
         "ncu": "ncu -au && yarn",
         "test": "mocha -r ts-node/register test/**/*.ts",
+        "test:w": "mocha -r ts-node/register --watch-extensions ts --watch test/**/*.ts",
         "build": "rm -r dist; tsc --rootDir src"
     },
     "devDependencies": {
-        "@types/chai": "^4.0.5",
+        "@types/chai": "^4.0.8",
+        "@types/es6-promise": "^0.0.33",
+        "@types/isomorphic-fetch": "^0.0.34",
         "@types/mocha": "^2.2.44",
         "chai": "^4.1.2",
         "mocha": "^4.0.1",
         "npm-check-updates": "^2.13.0",
         "ts-node": "^3.3.0",
         "tslint": "^5.8.0",
-        "typescript": "^2.6.1"
+        "typescript": "^2.6.2"
+    },
+    "dependencies": {
+        "es6-promise": "^4.1.1",
+        "isomorphic-fetch": "^2.2.1"
     }
 }
