--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,23 +2,25 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "experimentalDecorators": true,
-        "noImplicitAny": true,
-        "skipLibCheck": true,
         "typeRoots": [
             "node_modules/@types"
         ],
+        "outDir": "dist",
         "lib": [
             "esnext",
             "dom"
         ],
-        "outDir": "dist",
-        "rootDir": ".",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "removeComments": true,
+        "strict": true,
+        "noImplicitAny": true,
+        "sourceMap": true,
+        "skipLibCheck": true,
         "declaration": true
     },
     "exclude": [
         "node_modules",
-        "test",
-        "demo"
+        "test"
     ]
 }
